[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/save_object/SaveObject.gd" type="Script" id=1]
[ext_resource path="res://tilesets/house/flower_vase_save.png" type="Texture" id=2]
[ext_resource path="res://objects/table/Table.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/save_object/save_notification.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 2.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[node name="SaveObject" type="StaticBody2D"]
script = ExtResource( 1 )
notification = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.25 )
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
modulate = Color( 0.803922, 1, 0, 1 )
shape = SubResource( 2 )

[node name="FlowerSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
z_index = 3
texture = ExtResource( 2 )
hframes = 2

[node name="Table" parent="." instance=ExtResource( 3 )]
pause_mode = 1
position = Vector2( 0, 0 )
script = null

[node name="Illumination" type="Sprite" parent="."]
material = SubResource( 6 )

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
